--- a/templates/comment.html
+++ b/templates/comment.html
@@ -7,7 +7,7 @@
 <body>
 <div style="width:100%;text-align:center">
     <h1>Please Comment (testing)</h1>
-    <form action="http://127.0.0.1:5000/add_successfully" method="post" enctype="multipart/form-data">
+    <form action="/add_successfully" method="post">
       <textarea name="message" rows="2" class="question" id="msg"
                 required autocomplete="off" style="height: 300px; width: 500px"></textarea><br>
       <input type="submit" value="Submit!" />
