--- a/templates/check_wrong.html
+++ b/templates/check_wrong.html
@@ -9,6 +9,7 @@
 <form action="/check" method="post">
     <input name="password" placeholder="input password">
     <input type="submit" value="Submit">
+    <div align=center><a href="http://beian.miit.gov.cn/" target=_blank>桂ICP备2020010172号-1</a></div>
 </form>
 </body>
 </html>
