--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     </span>
     <span id="news_2">
         <p>Login</p>
-        <form id="login" action="http://127.0.0.1:5000/check" method="post">
+        <form id="login" action="/check" method="post">
             <input type="text" name="password" placeholder="input password"><br><br>
             <input type="submit" value="submit">
         </form>
