--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div class="header">
+<div class="head">
     <span class="welcome">小妞妞的小网站～❤️</span>
 </div>
 <div class="content"></div><br>
